Fix the letter spacing in "helsinki"

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -796,7 +796,7 @@ th:last-child {
 
       b {
         color: $color-blue;
-        letter-spacing: -0.08em;
+        letter-spacing: -0.05em;
         font: 300 93.75%/1 $font-body;
         display: block;
       }
